// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Karura <-> Statemine > Karura transfer assets to Statemine > events 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 16000000000,
          },
          "id": {
            "Concrete": {
              "interior": "Here",
              "parents": 1,
            },
          },
        },
        {
          "fun": {
            "Fungible": "(rounded 10000000)",
          },
          "id": {
            "Concrete": {
              "interior": {
                "X3": [
                  {
                    "Parachain": 1000,
                  },
                  {
                    "PalletInstance": 50,
                  },
                  {
                    "GeneralIndex": "(rounded 2000)",
                  },
                ],
              },
              "parents": 1,
            },
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": 1000,
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 16000000000,
        },
        "id": {
          "Concrete": {
            "interior": "Here",
            "parents": 1,
          },
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredMultiAssets",
    "section": "xTokens",
  },
]
`;

exports[`Karura <-> Statemine > Karura transfer assets to Statemine > hrmp 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 9999199,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 0,
                  },
                },
              },
              {
                "fun": {
                  "fungible": 300000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "here": null,
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 300000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "here": null,
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "all": null,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                      "network": {
                        "any": null,
                      },
                    },
                  },
                },
                "parents": 0,
              },
              "maxAssets": 2,
            },
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`Karura <-> Statemine > Karura transfer assets to Statemine > system events 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": "(rounded 1300000000)",
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Karura <-> Statemine > Karura transfer assets to Statemine 1`] = `
{
  "free": "(rounded 10000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura <-> Statemine > Karura transfer assets to Statemine 2`] = `
{
  "balance": "(rounded 10000000)",
  "extra": null,
  "isFrozen": false,
  "reason": {
    "sufficient": null,
  },
}
`;

exports[`Karura <-> Statemine > Statemine transfer assets to Karura > hrmp 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 10000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x3": [
                        {
                          "parachain": 1000,
                        },
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 10000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x3": [
                        {
                          "parachain": 1000,
                        },
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "all": null,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": {
                        "any": null,
                      },
                    },
                  },
                },
                "parents": 0,
              },
              "maxAssets": 1,
            },
          },
        ],
      },
    ],
    "recipient": 2000,
  },
]
`;

exports[`Karura <-> Statemine > Statemine transfer assets to Karura > system events 1`] = `
[
  {
    "data": [
      {
        "interior": {
          "X1": {
            "Parachain": 2000,
          },
        },
        "parents": 1,
      },
      3,
    ],
    "method": "SupportedVersionChanged",
    "section": "polkadotXcm",
  },
  {
    "data": [
      {
        "Complete": "(rounded 650000000)",
      },
    ],
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;

exports[`Karura <-> Statemine > Statemine transfer assets to Karura > system events 2`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "messageHash": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Karura <-> Statemine > Statemine transfer assets to Karura 1`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": "(rounded 10000000000000)",
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`Karura <-> Statemine > Statemine transfer assets to Karura 2`] = `
{
  "free": "(rounded 10000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;
